--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>SecureZ</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">An application to protect everything that is digital.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAgFCyifRurADiP7FqMep-b6W3BGCsDuWZPdaF4FO3RTIAv2ch">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -200,21 +200,18 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSLcQRydZr-_gsGz1wPk-m127ZtZI1k0F_lxfjj-86EhSOpLaa0">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    It is an app designed to protect every digital application used 
+	    in a house. It works for maximum 5 devices. It includes all kinds
+	    of products like the laptop, cell-phone, smart TV, cars etc.
+	    To install it on its system you will need to plug this device to 
+	    your system using the usb cable. It is automatically integrated to 
+	    recognize the type of device running. It can be used any how any 
+	    where. It is an highly secured software and recommended by lots of 
+	    people. Its beta tests have been successful.
           </p>
         </div>
       </div>
@@ -222,21 +219,25 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            So basically how does this software work is:
+	    Once you install it on the device, it registers the device with 
+	    its specific ID to our main database with the users complete 
+	    profile stored while buying the software.
+	    Once the device is registered several functions are started on 
+	    the device. If its a computer or laptop or mobile it works as a 
+	    anti-virus as well as theft detection as well as intrusion or 
+	    malware detection. It's a all in one combo software. Any suspicious
+	    activity detected by the system is informed to the user immediately.
+	    If it is installed on a vehicle. It acts as location finder as well 
+	    as vehicle finder as well as alarm detector. Similar to that of google
+	    now but more intuitive. If installed on a smart tv having internet 
+ 	    access it controls the data flow on the internet not letting any malicious 
+	    activity to take place. Moreover if found, it immediately stops the 
+	    connection and rebuilds firewall.	  
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREFYbjyz6EPikOkPkYoZPwIEymQYZfvCT4g07oVJjbOagI77ii">
         </div>
       </div>
 
